DBZ-6232 Support 'binary.handling.mode' also on bytea array